# RCP

./: .gitignore  Makefile.am  RCP.sln  RCP.sln.DotSettings  README.txt  configure.ac
MarketProxy/: CtpApiHandler.cpp  CtpApiHandler.h  MarketProxy.cpp  MarketProxy.vcxproj  MarketProxy.vcxproj.filters
StrategyRunner/: StrategyRunner.cpp  StrategyRunner.vcxproj  StrategyRunner.vcxproj.filters
StrategyServer/: StrategyServer.cpp  StrategyServer.h  StrategyServer.vcxproj  StrategyServer.vcxproj.filters  StrategyServerConfig.cpp  StrategyServerConfig.h  pch.h
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: Makefile.am
etc/: Makefile.am  strategies.xml  strategy1.xml  strategy1_l.xml  strategy2.xml  strategy2_u.xml  strategy_1.xml  strategy_server.xml  strategy_server_u.xml
etc/tradeapi/: Makefile.am
include/: Makefile.am  rcp.h  rcp_type.h
include/tradeapi/: Makefile.am
lib/: Makefile.am
rcp/: AbstractTradeStrategy.cpp  AbstractTradeStrategy.h  AbstractTradeStrategyLoader.cpp  AbstractTradeStrategyLoader.h  StrategyRepositoryManager.cpp  StrategyRepositoryManager.h  StrategyRunner.cpp  StrategyRunner.h  TradeStrategyInfo.cpp  TradeStrategyInfo.h  TradeStrategyItem.cpp  TradeStrategyItem.h  TradeStrategyLoader.cpp  TradeStrategyLoader.h  rcp.h  rcp.vcxproj  rcp.vcxproj.filters  stdafx.h
rcpApi/: rcpApi.cpp  rcpApi.vcxproj  rcpApi.vcxproj.filters  rpcApi.h
src/: Makefile.am
src/EchoRunner/: EchoRunner.cpp  EchoRunner.vcxproj  Makefile.am
src/EchoStrategy/: EchoStrategy.cpp  (+4 more)
src/StrategyRunner/: Makefile.am  StrategyRunner.cpp  StrategyRunner.h  StrategyRunner.vcxproj  StrategyRunnerAdapter.cpp  StrategyRunnerAdapter.h  StrategyRunnerAdapterFactory.cpp  StrategyRunnerAdapterFactory.h  m.cpp  main.cpp
src/rcp/: CtpApiHandler.cpp  CtpApiHandler.h  CtpConfiguration.cpp  CtpConfiguration.h  CtpHelper.cpp  CtpHelper.h  CtpQuotation.cpp  CtpQuotation.h  DllTradeStrategy.cpp  DllTradeStrategy.h  InvalidFormat.cpp  InvalidFormat.h  Makefile.am  MdSpi.cpp  MdSpi.h  Quotation.cpp  Quotation.h  QuotationAdapter.cpp  QuotationAdapter.h  QuotationHandler.h  QuotationSubscriber.cpp  QuotationSubscriber.h  RunnerStub.cpp  RunnerStub.h  StrategyServer.cpp  StrategyServer.h  StrategyServerConfigurator.cpp  StrategyServerConfigurator.h  TradeStrategy.cpp  TradeStrategy.h  TradeStrategyConfigurator.cpp  TradeStrategyConfigurator.h  dllmain.cpp  dumpable.h  rcp.vcxproj
src/units/: AllTestSuit.cpp  AllTestSuit.h  DllTest.cpp  DllTest.h  JsonTest.cpp  JsonTest.h  Makefile.am  RunnerStubTest.cpp  RunnerStubTest.h  SubscriberTest.cpp  SubscriberTest.h  units.cpp  units.vcxproj
third/: Makefile.am
(+14 files in other folders)
