bin_PROGRAMS=strategy_runner
strategy_runner_SOURCES= main.cpp StrategyRunnerAdapter.cpp StrategyRunnerAdapterFactory.cpp StrategyRunnerAdapterFactory.h StrategyRunnerAdapter.h StrategyRunner.cpp StrategyRunner.h
strategy_runner_CPPFLAGS=-I$(top_srcdir)/include
strategy_runner_LDADD=-L../rcp -lrcp
EXTRA_DIST=StrategyRunner.vcxproj
