lib_LTLIBRARIES = librcp.la
librcp_la_SOURCES= CtpApiHandler.h CtpConfiguration.h CtpHelper.h CtpQuotation.h DllTradeStrategy.h dumpable.h MdSpi.h QuotationAdapter.h Quotation.h QuotationHandler.h QuotationSubscriber.h RunnerStub.h StrategyServerConfigurator.h StrategyServer.h TradeStrategyConfigurator.h TradeStrategy.h CtpApiHandler.cpp CtpConfiguration.cpp CtpHelper.cpp CtpQuotation.cpp DllTradeStrategy.cpp MdSpi.cpp QuotationAdapter.cpp Quotation.cpp QuotationSubscriber.cpp RunnerStub.cpp StrategyServerConfigurator.cpp StrategyServer.cpp TradeStrategyConfigurator.cpp TradeStrategy.cpp
librcp_la_CPPFLAGS=-I$(top_srcdir)/include
librcp_la_LIBADD = -ldl -lthostmduserapi
EXTRA_DIST= rcp.vcxproj dllmain.cpp
